--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,10 @@ language: php
 
 php:
  - 5.3
- - 5.4
- - 5.5
- - 5.6
- - hhvm
 
-before_script:
- - composer self-update
- - composer install --dev
+before_install: composer self-update
+
+install: composer install --dev
 
 script:
  - phpunit --configuration phpunit.xml
