--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ language: php
 
 php:
  - 5.3
+ - 5.5
+ - 5.6
+ - hhvm
 
 before_install: composer self-update
 
-install: composer install --dev
+install: composer install
 
 script:
  - phpunit --configuration tests/phpunit.xml
