--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,6 @@
     "zendframework/zendframework1": "1.12.10"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.4.2"
+    "phpunit/phpunit": "^4.4.2"
   }
 }
